add commands and declaration section for font shapes and families

--- a/scripts/font-family.tex
+++ b/scripts/font-family.tex
@@ -16,4 +16,28 @@ Its address is \texttt{http://www.ctan.org}.
 \section{\sffamily\LaTeX\ resources on the internet}
 The best place for downloading LaTeX related software is CTAN.
 Its address is \ttfamily http://www.ctan.org.
+
+\section{Commands}
+\textrm{Roman family},
+\textsf{Sans-serif family},
+\texttt{Typewriter family},
+\textbf{Bold face},
+\textmd{Medium},
+\textit{Italic shape},
+\textsl{Slanted shape},
+\textsc{Small Caps shape},
+\textup{Upright shape},
+\textnormal{default font}.
+
+\section{Declarations}
+\rmfamily Roman family,
+\sffamily Sans-serif family,
+\ttfamily Typewriter family,
+\bfseries Bold face,
+\mdseries Medium,
+\itshape Italic shpae,
+\slshape Slanted shape,
+\scshape Small Caps shape,
+\upshape Upright shape,
+\normalfont defalut font.
 \end{document}
