--- a/scripts/font-family.tex
+++ b/scripts/font-family.tex
@@ -11,11 +11,19 @@
 \section{\textsf{\LaTeX\ resources on the internet}}
 The best place for downloading LaTeX related software is CTAN.
 Its address is \texttt{http://www.ctan.org}.
+(These text will be in normalfont family).
 
 %use switches for font family
 \section{\sffamily\LaTeX\ resources on the internet}
 The best place for downloading LaTeX related software is CTAN.
 Its address is \ttfamily http://www.ctan.org.
+(These text will be in typewriter family).
+\normalfont
+
+\section{{\sffamily\LaTeX\ resources on the internet}}
+The best place for downloading LaTeX related software is CTAN.
+Its address is {\ttfamily http://www.ctan.org}.
+(These text will be in normalfont family).
 
 \section{Commands}
 \textrm{Roman family},
