add comment for newcommand syntax

--- a/scripts/newcommand.tex
+++ b/scripts/newcommand.tex
@@ -4,6 +4,7 @@
 %opening
 \title{Create your own command}
 \author{Hao}
+%\newcommand{cmd}[args][optional]{defination}
 \newcommand{\TUG}{\textsc{\TeX\ Users Group}}
 \newcommand{\keyword}[1]{\textbf{#1}}
 \newcommand{\keywordWithFont}[2][\bfseries]{{#1#2}}
