line breaks & ligatures

--- a/scripts/line-break.tex
+++ b/scripts/line-break.tex
@@ -19,4 +19,26 @@ text.
 
 There are two paragraphs here. 
 The first line of a paragraphs will be indented, but not when it follows a heading.
+
+% break lines manually
+\section{Spring, the Sweet Spring}
+
+Spring, the sweet Spring, is the year's pleasant king; \\[1cm]
+Then blooms each thing, then maids dance in a ring, \\[1.5cm]
+Cold doth not sting, the pretty birds do sing, \\[2cm]
+Cuckoo, jug-jug, pu-we, to-witta-woo!\\
+--------------------------------------
+
+\noindent
+The palm and may make country houses gay, \linebreak
+Lambs frisk and play, the shepherds pipe all day, \linebreak
+And we hear aye birds tune this merry lay: \linebreak
+Cuckoo, jug-jug, pu-we, to-witta-woo!\linebreak
+
+\noindent
+The fields breathe sweet, the daisies kiss our feet, \newline
+Young lovers meet, old wives a-sunning sit, \newline
+In every street these tunes our ears do greet: \newline
+Cuckoo, jug-jug, pu-we, to witta-woo! 
+
 \end{document}
